--- a/PatinaBlazor/PatinaBlazor/Components/Pages/Auth.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/Pages/Auth.razor
@@ -1,9 +1,7 @@
-﻿@page "/auth"
-
+@page "/auth"
 @using Microsoft.AspNetCore.Authorization
-
 @attribute [Authorize]
-@rendermode InteractiveAuto
+@rendermode InteractiveServer
 
 <PageTitle>Auth</PageTitle>
 
