--- a/PatinaBlazor/PatinaBlazor/Components/Pages/Counter.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/Pages/Counter.razor
@@ -1,5 +1,5 @@
-﻿@page "/counter"
-@rendermode InteractiveAuto
+@page "/counter"
+@rendermode InteractiveWebAssembly
 
 <PageTitle>Counter</PageTitle>
 
