--- a/PatinaBlazor/PatinaBlazor/Components/_Imports.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/_Imports.razor
@@ -8,5 +8,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using PatinaBlazor
-@using PatinaBlazor.Client
 @using PatinaBlazor.Components
+@using PatinaBlazor.Components.Account
