--- a/PatinaBlazor/PatinaBlazor/Components/Pages/EditCollectable.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/Pages/EditCollectable.razor
@@ -263,7 +263,7 @@ else
                                                accept="image/*"
                                                multiple />
                                     <div class="form-text">
-                                        <small>Upload up to 10 new images for your collectable (max 5MB each). Supported formats: JPG, PNG, GIF, WebP</small>
+                                        <small>Upload up to 10 new images for your collectable (max 15MB each). Supported formats: JPG, PNG, GIF, WebP. Large images will be automatically compressed to improve upload speed.</small>
                                     </div>
 
                                     @if (imageUploadErrors.Any())
