--- a/PatinaBlazor/PatinaBlazor/Components/App.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/App.razor
@@ -9,12 +9,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="PatinaBlazor.styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
+    <link rel="apple-touch-icon" href="favicon.png" />
+    <link rel="mask-icon" href="favicon.png" color="#000000" />
     <HeadOutlet />
 </head>
 
 <body>
     <Routes />
+    <script src="js/imageCompression.js"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
