--- a/PatinaBlazor/PatinaBlazor/Components/App.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/App.razor
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="PatinaBlazor.styles.css" />
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
-    <link rel="apple-touch-icon" href="favicon.png" />
-    <link rel="mask-icon" href="favicon.png" color="#000000" />
+    <link rel="icon" type="image/x-icon" href="img/icons/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="img/icons/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="img/icons/android-chrome-512x512.png" />
     <HeadOutlet />
 </head>
 
